"Only Insert Needed" doesn't work when using Trackball rotation #50026

Closed
opened 2016-11-14 17:57:55 +01:00 by Michael Glen Montague · 4 comments

System Information
Windows 10 Home, 64-bit
GTX 780

Blender Version
Broken: 2.78a

Short description of error
Rotating an object or bone in Trackball mode doesn't add rotation keyframes when Only Insert Needed is enabled.

Exact steps for others to reproduce the error
Enable Only Insert Needed in the Preferences and Automatic Keyframe Insertion on the Timeline.
Tap R once to rotate the default cube on a single axis, and all rotation keyframes will be inserted. Jump a few frames ahead, double-tap R to rotate it with Trackball rotation, and no rotation keyframes will be inserted.

**System Information** Windows 10 Home, 64-bit GTX 780 **Blender Version** Broken: 2.78a **Short description of error** Rotating an object or bone in Trackball mode doesn't add rotation keyframes when *Only Insert Needed* is enabled. **Exact steps for others to reproduce the error** Enable *Only Insert Needed* in the Preferences and *Automatic Keyframe Insertion* on the Timeline. Tap R once to rotate the default cube on a single axis, and all rotation keyframes will be inserted. Jump a few frames ahead, double-tap R to rotate it with Trackball rotation, and no rotation keyframes will be inserted.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MontagueMGM

Added subscriber: @MontagueMGM

This issue was referenced by 8b2905952e

This issue was referenced by 8b2905952e9a82206f1a112e99ccc27a6acdde63
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50026
No description provided.